--- a/src/app/search/card/card.component.html
+++ b/src/app/search/card/card.component.html
@@ -2,7 +2,10 @@
     <div class="row">
         <div *ngFor="let item of allPeople" class="card-people col-4 mt-4">
             <a class="card-link" [routerLink]="['/detail/'+ item.id]">
-                <img class=" card-img-top img-fluid " src="{{item.photo}} ">
+                <!--<img class=" card-img-top img-fluid " src="{{item.photo}} ">-->
+                <div class="box-img" [ngStyle]="{'background-image': 'url('+ item.photo + ')' }">
+
+                </div>
                 <div class="card-body card-people-description ">
                     <p class="card-text card-name ">{{item.name}}</p>
                     <p class="card-text card-fecha ">{{item.birthdate}}</p>
