--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -15,3 +15,12 @@
     background-color:#fff;
     padding: 10px;
 }
+
+.mat-form-field-flex.ng-tns-c39-0 {
+    border-radius: 10px !important;
+    background-color: #dfdfe4 !important;
+}
+
+.mat-form-field-flex {
+    border-radius: 14px;
+}
