--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -3,7 +3,6 @@
     color: #4e4e4e;
     &:hover {
         color: #000;
-        background-color: #fff;
     }
     &:active {
         color: #000;
@@ -18,5 +17,9 @@
 
 .btn-warning {
     color: #fff;
-    border-radius: 15px
+    border-radius: 15px;
+    &:hover {
+        color: #000;
+        background-color: #fff;
+    }
 }
