--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="box-search row justify-content-center">
 
-        <div class="col-4">
+        <div class="col-12 col-sm-6 col-lg-4">
             <label class="subtitulo"> Busca por nombre o apellido</label>
             <input class="primero" type="text" placeholder="Busca por nombre o apellido">
         </div>
-        <div class="col-4">
+        <div class="col-12 col-sm-6 col-lg-4">
 
             <mat-form-field appearance="fill" style="margin-top: 18px;">
                 <mat-label>Fecha de nacimiento</mat-label>
