--- a/src/app/people/people.component.scss
+++ b/src/app/people/people.component.scss
@@ -18,12 +18,8 @@ p.text-b {
 
 .box-img {
     width: 100%;
-    height: 400px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+    height: auto;
+    border-radius: 8px;
 }
 
 .card-people {
@@ -31,5 +27,17 @@ p.text-b {
 }
 
 .white-container {
-    background-color: white;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 6px rgba(103, 99, 139, 0.120674);
+    .main-box {
+        margin-bottom: -300px;
+    }
+}
+
+.secondbox {
+    margin-top: 300px;
+}
+
+.firtsbox {
+    margin-bottom: 10px;
 }
