new component login register dashboard

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<router-outlet>
+</router-outlet>
+<div class="login">
+    <div class="login-triangle"></div>
+
+    <h2 class="login-header">Log in</h2>
+
+    <form class="login-container">
+        <p><input type="email" placeholder="Email"></p>
+        <p><input type="password" placeholder="Password"></p>
+        <p><input type="submit" value="Log in"></p>
+        <a class="link" (click)="register()">No tienes cuenta</a>
+    </form>
+</div>
