--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,13 @@
-<header class="d-flex flex-wrap justify-content-center py-3" [ngClass]="{'bg-white': changeBackground}">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <img src="assets/images/thepeople.svg" />
-    </a>
+<div *ngIf="mostrar">
+    <header class="d-flex flex-wrap justify-content-center py-3" [ngClass]="{'bg-white': changeBackground}">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <img src="assets/images/thepeople.svg" />
+        </a>
 
-    <ul class="nav justify-content-end">
-        <li class="nav-item"><a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link active" aria-current="page">Inicio</a></li>
-        <li class="nav-item"><a [routerLink]="['/search']" routerLinkActive="active" class="nav-link">Búsqueda</a></li>
-        <li class="nav-item"><button (click)="addnew()" type="button" class="btn btn-warning">Subir nuevo</button></li>
-    </ul>
-</header>
+        <ul class="nav justify-content-end">
+            <li class="nav-item"><a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link active" aria-current="page">Inicio</a></li>
+            <li class="nav-item"><a [routerLink]="['/search']" routerLinkActive="active" class="nav-link">Búsqueda</a></li>
+            <li class="nav-item"><button (click)="addnew()" type="button" class="btn btn-warning">Subir nuevo</button></li>
+        </ul>
+    </header>
+</div>
