--- a/src/app/search/card/card.component.html
+++ b/src/app/search/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="container box-card">
     <div class="row justify-content-center">
-        <div *ngFor="let item of allPeople" class="card-people col-12 col-sm-6 col-lg-4 mt-4">
+        <div *ngFor="let item of newArray" class="card-people col-12 col-sm-6 col-lg-4 mt-4">
             <a class="card-link" [routerLink]="['/detail/'+ item.id]">
                 <!--<img class=" card-img-top img-fluid " src="{{item.photo}} ">-->
                 <div class="box-img" [ngStyle]="{'background-image': 'url('+ item.photo + ')' }">
