--- a/src/app/dashboard/all-people/all-people.component.html
+++ b/src/app/dashboard/all-people/all-people.component.html
@@ -25,14 +25,35 @@
                                 {{item.name}}
                             </td>
                             <td>
-                                <button type="button" (click)=delete(item.id) class="btn btn-danger float-end btn-table"><fa-icon [icon]="faDelete"></fa-icon></button>
-                                <a [routerLink]="['/dashboard/editar/'+ item.id]"><button type="button" class="btn btn-success float-end btn-table"><fa-icon [icon]="faEdit"></fa-icon></button></a>
+                                <button type="button" (click)=delete(item) class="btn btn-danger float-end btn-table"><fa-icon [icon]="faDelete" data-bs-toggle="modal" data-bs-target="#exampleModal"></fa-icon></button>
+                                <a [routerLink]="['/dashboard/detail/'+ item.id]"><button type="button" class="btn btn-success float-end btn-table"><fa-icon [icon]="faEdit"></fa-icon></button></a>
                             </td>
                         </tr>
                     </ng-container>
 
                 </tbody>
             </table>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">¿Estás seguro de eliminar esta persona?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Vas a eliminar a {{ personToDelete?.name }}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-danger">Sí, eliminar</button>
+            </div>
         </div>
     </div>
 </div>
