--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,19 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-md">
+        <a class="navbar-brand" href="#">Dashboard</a>
+        <div class="row">
+            <div class="col-2">
+                <div class="dropdown">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                    Andrey M.
+                  </a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
 <router-outlet>
-
 </router-outlet>
