--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container footer">
+<div *ngIf="mostrar" class="container footer">
     <ul class="nav justify-content-center">
         <li class="nav-item">
             <a class="nav-link" href="#">Aviso legal</a>
