--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -19,6 +19,12 @@
                 <div class="botton-finalizar">
                     <button type="submit" class="btn btn-add">Registrar</button>
                 </div>
+
+                <div class="botton-cuenta">
+                    <button type="submit" (click)="login()" class="btn btn-add">Ya tengo cuenta</button>
+                </div>
+
+
             </form>
         </div>
     </div>
